--- a/part4/package.json
+++ b/part4/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index.js",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "test": "jest --verbose"
   },
   "author": "Divyaswor Makai",
   "license": "ISC",
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "eslint": "^7.3.1",
+    "jest": "^26.1.0",
     "nodemon": "^2.0.4"
   }
 }
