--- a/bloglist-frontend/package.json
+++ b/bloglist-frontend/package.json
@@ -36,6 +36,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
-    "cypress": "^4.10.0"
+    "cypress": "^4.10.0",
+    "eslint-plugin-cypress": "^2.11.1"
   }
 }
