--- a/Part8/Part1/package.json
+++ b/Part8/Part1/package.json
@@ -4,13 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^2.16.1",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "graphql": "^15.3.0",
+    "mongoose": "^5.9.27",
+    "mongoose-unique-validator": "^2.0.3",
     "uuid": "^8.3.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4"
   }
 }
