--- a/Part9/part1/package.json
+++ b/Part9/part1/package.json
@@ -10,5 +10,8 @@
     "exer": "ts-node exerciseCalculator.ts"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@types/node": "^14.0.27"
+  }
 }
