--- a/Part9/part1/package.json
+++ b/Part9/part1/package.json
@@ -9,17 +9,23 @@
     "bmi": "ts-node bmiCalculator.ts",
     "exer": "ts-node exerciseCalculator.ts",
     "dev": "ts-node-dev index.ts",
-    "start": "ts-node index.ts"
+    "start": "ts-node index.ts",
+    "lint": "eslint --ext .ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/body-parser": "^1.19.0",
     "@types/node": "^14.0.27",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "typescript": "^3.9.7"
   },
   "devDependencies": {
     "@types/express": "^4.17.7",
+    "@typescript-eslint/eslint-plugin": "^3.9.0",
+    "@typescript-eslint/parser": "^3.9.0",
+    "eslint": "^7.6.0",
     "ts-node-dev": "^1.0.0-pre.56"
   }
 }
