--- a/Part9/part2/package.json
+++ b/Part9/part2/package.json
@@ -9,11 +9,11 @@
     "dev": "ts-node-dev index.ts",
     "lint": "eslint --ext .ts .",
     "start": "node build/index.js"
-
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.7",
     "@types/express": "^4.17.7",
     "@typescript-eslint/eslint-plugin": "^3.9.0",
     "@typescript-eslint/parser": "^3.9.0",
@@ -22,6 +22,7 @@
     "typescript": "^3.9.7"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1"
   }
 }
